Make sure menu is visible even with diable js

--- a/public/main.css
+++ b/public/main.css
@@ -13,8 +13,8 @@
 html {
 	background-color: #036;
     font-family: "Calibri","sans-serif";
-    background: url("./bilder/plankebakgrunn.jpg") no-repeat center center fixed;
-    background-size: fill;
+    background: url("./bilder/grefsenkollen.jpg") no-repeat center center fixed;
+    background-size: cover;
 }
 
 .header {
@@ -161,16 +161,22 @@ html {
     }
 
     .header h1 {
-	font-size: 5rem;
-	font-weight: normal;
-	margin: 0.1rem 0.2rem;
-    color: #434343;
+        font-size: 5rem;
+        margin: 0.1rem 0.2rem;
     }
 
     .header h2 {
         font-size: 2.5rem;
-        font-weight: normal;
         margin: -2.6rem auto auto -.5rem;
-        color: #007f99;
+    }
+
+    .main-menu {
+        display: block;
+        background-color: transparent;
+    }
+
+    .main-menu li {
+        display: inline-block;
+
     }
 }
